--- a/ServiceDemo/aidldemo/src/main/res/layout/activity_main.xml
+++ b/ServiceDemo/aidldemo/src/main/res/layout/activity_main.xml
@@ -3,35 +3,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="com.example.servicedemo.MainActivity"
+    tools:context="com.example.aidldemo.MainActivity"
     android:orientation="vertical">
 
     <Button
         android:id="@+id/start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="启动服务"
+        android:text="远程启动服务"
         android:onClick="operate" />
 
     <Button
         android:id="@+id/stop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="停止服务"
+        android:text="远程停止服务"
         android:onClick="operate" />
 
     <Button
         android:id="@+id/bind"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="绑定服务"
+        android:text="远程绑定服务"
         android:onClick="operate" />
 
     <Button
         android:id="@+id/unbind"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="解绑服务"
+        android:text="远程解绑服务"
         android:onClick="operate"/>
 
 </LinearLayout>
